--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weflow",
-  "version": "1.2.0",
+  "version": "1.3.2",
   "description": "WeFlow",
   "main": "dist-electron/main.js",
   "author": "cc",
@@ -105,6 +105,24 @@
     "asarUnpack": [
       "node_modules/silk-wasm/**/*",
       "node_modules/sherpa-onnx-node/**/*"
+    ],
+    "extraFiles": [
+      {
+        "from": "resources/msvcp140.dll",
+        "to": "."
+      },
+      {
+        "from": "resources/msvcp140_1.dll",
+        "to": "."
+      },
+      {
+        "from": "resources/vcruntime140.dll",
+        "to": "."
+      },
+      {
+        "from": "resources/vcruntime140_1.dll",
+        "to": "."
+      }
     ]
   }
 }
